--- a/fastlane/metadata/cs/release_notes.txt
+++ b/fastlane/metadata/cs/release_notes.txt
@@ -1,3 +1,3 @@
-• The calls tab will now automatically organize and group related calling events together, like when someone calls you back right away because they accidentally hung up before they could say “I love you too.”
+• Karta hovorů teď automaticky uspořádá a seskupí související události hovoru dohromady.
 
-• We also updated Signal's in-app camera to support scanning username QR codes.
+• Také jsme aktualizovali fotoaparát v aplikaci Signal, aby podporoval skenování QR kódů uživatelských jmen.
