--- a/fastlane/metadata/fr-CA/release_notes.txt
+++ b/fastlane/metadata/fr-CA/release_notes.txt
@@ -1,3 +1,3 @@
-• The calls tab will now automatically organize and group related calling events together, like when someone calls you back right away because they accidentally hung up before they could say “I love you too.”
+• Désormais, l’onglet Appels regroupe automatiquement tous les appels similaires – par exemple, lorsqu’un de vos proches raccroche par erreur et vous rappelle immédiatement pour vous dire : « Je t’aime aussi ».
 
-• We also updated Signal's in-app camera to support scanning username QR codes.
+• Nous avons aussi mis à jour la caméra de l’appli Signal pour vous permettre de scanner les codes QR associés aux noms d’utilisateur.
