--- a/fastlane/metadata/he/release_notes.txt
+++ b/fastlane/metadata/he/release_notes.txt
@@ -1,3 +1,3 @@
-• The calls tab will now automatically organize and group related calling events together, like when someone calls you back right away because they accidentally hung up before they could say “I love you too.”
+• מעכשיו לשונית השיחות תארגן ותקבץ יחד אוטומטית אירועי שיחה שקשורים זה לזה.
 
-• We also updated Signal's in-app camera to support scanning username QR codes.
+• עדכנו גם את המצלמה בתוך האפליקציה של Signal כדי לתמוך בסריקת קודי QR של שמות משתמש.
