--- a/fastlane/metadata/hr/release_notes.txt
+++ b/fastlane/metadata/hr/release_notes.txt
@@ -1,3 +1,3 @@
-• The calls tab will now automatically organize and group related calling events together, like when someone calls you back right away because they accidentally hung up before they could say “I love you too.”
+• Kartica poziva sada će automatski organizirati i grupirati povezane pozive.
 
-• We also updated Signal's in-app camera to support scanning username QR codes.
+• Također smo ažurirali postavke kamere u aplikaciji Signal kako bi podržala skeniranje QR kodova za korisnička imena.
