--- a/fastlane/metadata/hu/release_notes.txt
+++ b/fastlane/metadata/hu/release_notes.txt
@@ -1,3 +1,3 @@
-• The calls tab will now automatically organize and group related calling events together, like when someone calls you back right away because they accidentally hung up before they could say “I love you too.”
+• A Hívások lap ezentúl automatikusan rendszerezi és csoportosítja a kapcsolódó hívási eseményeket.
 
-• We also updated Signal's in-app camera to support scanning username QR codes.
+• A Signal alkalmazáson belüli kamerádat is frissítettük, hogy támogassa a felhasználónév QR-kódok beolvasását.
