--- a/fastlane/metadata/ms/release_notes.txt
+++ b/fastlane/metadata/ms/release_notes.txt
@@ -1,3 +1,3 @@
-• The calls tab will now automatically organize and group related calling events together, like when someone calls you back right away because they accidentally hung up before they could say “I love you too.”
+• Tab panggilan kini akan mengatur dan mengumpul acara panggilan yang berkaitan secara automatik.
 
-• We also updated Signal's in-app camera to support scanning username QR codes.
+• Kami juga mengemas kini kamera dalam aplikasi Signal untuk menyokong imbasan kod QR nama pengguna.
