--- a/fastlane/metadata/nl-NL/release_notes.txt
+++ b/fastlane/metadata/nl-NL/release_notes.txt
@@ -1,3 +1,3 @@
-• The calls tab will now automatically organize and group related calling events together, like when someone calls you back right away because they accidentally hung up before they could say “I love you too.”
+• Het tabblad Oproepen sorteert en groepeert nu automatisch gerelateerde oproepgebeurtenissen. Bijvoorbeeld als je iemand direct terugbelt omdat je per ongeluk ophing voordat je “ik ook van jou” kon zeggen.
 
-• We also updated Signal's in-app camera to support scanning username QR codes.
+• We hebben ook de camera in Signal bijgewerkt om het scannen van QR-codes van gebruikersnamen te ondersteunen.
