--- a/fastlane/metadata/no/release_notes.txt
+++ b/fastlane/metadata/no/release_notes.txt
@@ -1,3 +1,3 @@
-• The calls tab will now automatically organize and group related calling events together, like when someone calls you back right away because they accidentally hung up before they could say “I love you too.”
+• Nå grupperes anropene dine automatisk i anropsoversikten.
 
-• We also updated Signal's in-app camera to support scanning username QR codes.
+• Vi har også oppdatert kameraet inne i Signal-appen, slik at det kan skanne QR-koder.
