--- a/fastlane/metadata/pl/release_notes.txt
+++ b/fastlane/metadata/pl/release_notes.txt
@@ -1,3 +1,3 @@
-• The calls tab will now automatically organize and group related calling events together, like when someone calls you back right away because they accidentally hung up before they could say “I love you too.”
+• Od teraz karta połączeń będzie automatycznie porządkować i grupować powiązane połączenia. Przyda się na przykład wtedy, kiedy Twoja druga połówka rozłączy się, zanim powie: „ja Ciebie też kocham”.
 
-• We also updated Signal's in-app camera to support scanning username QR codes.
+• Zaktualizowaliśmy również aparat w aplikacji Signal, tak aby umożliwiał skanowanie kodów QR z nazwą użytkownika.
