--- a/fastlane/metadata/pt-BR/release_notes.txt
+++ b/fastlane/metadata/pt-BR/release_notes.txt
@@ -1,3 +1,3 @@
-• The calls tab will now automatically organize and group related calling events together, like when someone calls you back right away because they accidentally hung up before they could say “I love you too.”
+• A aba das chamadas agora vai organizar e agrupar chamadas relacionadas automaticamente.
 
-• We also updated Signal's in-app camera to support scanning username QR codes.
+• Também atualizamos a câmera no app do Signal para aceitar a leitura de QR codes de nomes de usuários.
