--- a/fastlane/metadata/pt-PT/release_notes.txt
+++ b/fastlane/metadata/pt-PT/release_notes.txt
@@ -1,3 +1,3 @@
-• The calls tab will now automatically organize and group related calling events together, like when someone calls you back right away because they accidentally hung up before they could say “I love you too.”
+• O separador de chamadas agora organiza e agrupa automaticamente eventos de chamada relacionados.
 
-• We also updated Signal's in-app camera to support scanning username QR codes.
+• Também atualizámos a câmara da app do Signal para suportar a leitura de códigos QR de nomes de utilizador.
