--- a/fastlane/metadata/sv/release_notes.txt
+++ b/fastlane/metadata/sv/release_notes.txt
@@ -1,3 +1,3 @@
-• The calls tab will now automatically organize and group related calling events together, like when someone calls you back right away because they accidentally hung up before they could say “I love you too.”
+• I samtalsfliken kommer nu relaterade samtalshändelser automatiskt att organiseras och grupperas tillsammans.
 
-• We also updated Signal's in-app camera to support scanning username QR codes.
+• Vi har även uppdaterat Signals kamera i appen för att stödja skanning av QR-koder för användarnamn.
