--- a/fastlane/metadata/uk/release_notes.txt
+++ b/fastlane/metadata/uk/release_notes.txt
@@ -1,3 +1,3 @@
-• The calls tab will now automatically organize and group related calling events together, like when someone calls you back right away because they accidentally hung up before they could say “I love you too.”
+• Пов'язані виклики тепер автоматично групуються і впорядковуються у вкладці викликів. Наприклад, коли близька людина одразу передзвонює, бо випадково завершила виклик, не сказавши: «І я тебе люблю».
 
-• We also updated Signal's in-app camera to support scanning username QR codes.
+• Також ми оновили камеру в застосунку Signal. Тепер ви зможете сканувати QR-коди з іменами користувачів.
